--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-twitter",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Angular2 service of authorized request for twitter.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -23,5 +23,10 @@
     "@angular/http": "^2.0.0-rc.4",
     "jssha": "^2.1.0",
     "rxjs": "^5.0.0-beta.9"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Aoinu/ng2-twitter.git"
+  },
+  "private": false
 }
