--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es6",
+    "lib": ["es6", "dom"],
     "moduleResolution": "node",
     "inlineSourceMap": true,
     "emitDecoratorMetadata": true,
@@ -11,6 +12,10 @@
     "declaration": true,
 
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   }
 }
