--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
   "author": "Aoinu",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^1.8.10"
+    "@types/jasmine": "^2.2.34",
+    "typescript": "2.0.3"
   },
   "dependencies": {
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/http": "^2.0.0-rc.4",
-    "jssha": "^2.1.0",
-    "rxjs": "^5.0.0-beta.9"
+    "@angular/core": "2.0.1",
+    "@angular/http": "2.0.1",
+    "jssha": "2.2.0",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.25"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Aoinu/ng2-twitter.git"
   },
-  "private": false
+  "private": true
 }
